# 260308_sejongclass_api

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py  security.py
backend/app/core/: config.py
backend/app/dependencies/: auth.py
backend/app/routers/: auth.py  tech_stacks.py
backend/tests/: conftest.py  test_auth_tech_stacks.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/lib/: api.ts  query-hooks.ts  session.ts
frontend/src/routes/: about.tsx  home.tsx  login.tsx
